# starting-ragchatbot-codebase

./: CLAUDE.md  frontend-changes.md  pyproject.toml  query_flow_diagram.md
.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _heapq.data.json  _heapq.meta.json  _locale.data.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  (+240 more)
.mypy_cache/3.13/PIL/: ExifTags.data.json  ExifTags.meta.json  GimpGradientFile.data.json  GimpGradientFile.meta.json  GimpPaletteFile.data.json  GimpPaletteFile.meta.json  Image.data.json  Image.meta.json  ImageCms.data.json  ImageCms.meta.json  ImageColor.data.json  ImageColor.meta.json  ImageDraw.data.json  ImageDraw.meta.json  ImageDraw2.data.json  ImageDraw2.meta.json  ImageFile.data.json  ImageFile.meta.json  ImageFilter.data.json  ImageFilter.meta.json  ImageFont.data.json  ImageFont.meta.json  ImageMode.data.json  ImageMode.meta.json  ImageOps.data.json  ImageOps.meta.json  ImagePalette.data.json  ImagePalette.meta.json  ImagePath.data.json  ImagePath.meta.json  ImageQt.data.json  ImageQt.meta.json  PaletteFile.data.json  PaletteFile.meta.json  TiffImagePlugin.data.json  TiffImagePlugin.meta.json  TiffTags.data.json  TiffTags.meta.json  __init__.data.json  __init__.meta.json  (+18 more)
.mypy_cache/3.13/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json  wsgi.data.json  wsgi.meta.json
.mypy_cache/3.13/annotated_types/: __init__.data.json  __init__.meta.json
.mypy_cache/3.13/anthropic/: _decoders.data.json  _decoders.meta.json  _version.data.json  _version.meta.json
.mypy_cache/3.13/anyio/: __init__.data.json  __init__.meta.json  from_thread.data.json  from_thread.meta.json  (+4 more)
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality.sh  typecheck.sh
(+2499 files in other folders)
